--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -16,3 +16,11 @@ body {
     background-color: #ff7070;
     color: white;
 }
+
+.backuped {
+    background-color: #98FB98;
+}
+
+.backuping {
+    background-color: #fffacd;
+}
