fix: missing file issue

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -17,10 +17,14 @@ body {
     color: white;
 }
 
-.backuped {
-    background-color: #98FB98;
+.backup3 {
+    background-color: #cdffcd;
 }
 
-.backuping {
+.backup2 {
+    background-color: #eee;
+}
+
+.backup1 {
     background-color: #fffacd;
 }
